# Quorabust

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: audit.yml  ci.yml  docker.yml  nlp-smoke.yml
data/: README.md
data/sample/: README.md  synthetic_pairs.csv
docs/: ARCHITECTURE.md  ENTERPRISE.md  GRAFANA.md  LOAD_TESTING.md  NOTES.md  PRODUCT.md  REPORTING.md  SAMPLE_MODEL_CARD.md  SCALING.md
examples/: smoke_pairs.csv
grafana/dashboards/: quorabust-serving.json
loadtests/: k6_predict.js
notebooks/: 10_workflow.ipynb  README.md
scripts/: make_sample_data.py
src/quorabust/: __init__.py  __main__.py  cli.py  dataio.py  drift.py  embedding_features.py  explain.py  features.py  lineage.py  model.py  persist.py  preprocess.py  registry.py  report.py  report_validation.py  serve.py
tests/: test_cli.py  test_dataio.py  test_drift.py  test_embedding_features.py  test_embedding_optional.py  test_explain.py  test_features.py  test_lineage.py  test_metrics.py  test_model.py  test_model_builder.py  test_persist.py  test_preprocess.py  test_registry.py  test_report.py  test_report_validation.py  test_serve.py
