[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Quorabust"
version = "0.3.2"
description = "Text features and models for Quora-style duplicate question detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AliSina Karimi", email = "alisinakarimi.2003@gmail.com" },
]
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
]
[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
notebooks = [
    "jupyter>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=7.1.0",
    "ruff>=0.1",
    "mypy>=1.20.0",
    "pip-audit>=2.6",
    "pre-commit>=4.5.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
]
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
]
nlp = [
    "sentence-transformers>=3.0",
    "torch>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/AliSinaDevelo/Quorabust"

[project.scripts]
quorabust-train = "quorabust.cli:main"
quorabust-serve = "quorabust.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["src/quorabust"]
relative_files = true

[tool.mypy]
python_version = "3.10"
packages = ["quorabust"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "xgboost",
    "pandas.*",
    "numpy.*",
    "fastapi.*",
    "uvicorn.*",
    "prometheus_client.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
